<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sourabh.lifecycleexplorationapplication.SecondActivity">

    <ImageView
        android:id="@+id/ivSJSULogo"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/sjsulogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/btn_star_big_off" />

    <TextView
        android:id="@+id/tvActivityA"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/activityb"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivSJSULogo"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvInfoDesc"
        android:layout_width="368dp"
        android:layout_height="41dp"
        android:layout_margin="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/informationtext"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvActivityA"
        app:layout_constraintVertical_bias="0.369" />

    <Button
        android:id="@+id/btnFinishB"
        android:layout_width="wrap_content"
        android:layout_height="61dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/finishb"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInfoDesc" />


</android.support.constraint.ConstraintLayout>
